finished sign-up page and created a dreamer/dreams page with handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
+{{!-- Navbar to display in all pages --}}
 {{> header}}
 
+{{!-- Landing Page --}}
 <main>
     <div class="container" id="splashbox">
         <div class="row">
