added cdn tags for bootdtrap and jquery, modified links in resource dropdown to redirect to a new page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,8 +9,8 @@
                 <h1>Welcome to DreamDrop!</h1>
                 <h4>A place to share your dreams with other dreamers</h4>
                 <div>
-                    <button type="button" href="sign-in.handlebars" role="button" class="btn btn-primary btn-lg btn-block">Start
-                        Dropping Dreams Now</button>
+                    <a href="sign-in.handlebars" role="button" class="btn btn-info btn-lg btn-block">Start
+                        Dropping Dreams Now</a>
                 </div>
             </div>
         </div>
