--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -20,9 +20,9 @@
           Resources
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="https://www.buildingbeautifulsouls.com/dream-interpretation-meanings/30-types-of-dreams-what-they-mean/">Dream Types</a>
-          <a class="dropdown-item" href="https://www.horoscope.com/us/editorial/dream-dictionary.aspx">Dream Dictionary</a>
-          <a class="dropdown-item" href="https://www.amerisleep.com/blog/dream-hacking/">Dream Hacking</a>
+          <a class="dropdown-item" href="https://www.buildingbeautifulsouls.com/dream-interpretation-meanings/30-types-of-dreams-what-they-mean/" target="_blank">Dream Types</a>
+          <a class="dropdown-item" href="https://www.horoscope.com/us/editorial/dream-dictionary.aspx" target="_blank">Dream Dictionary</a>
+          <a class="dropdown-item" href="https://www.amerisleep.com/blog/dream-hacking/" target="_blank">Dream Hacking</a>
         </div>
       </li>
         </ul>
