--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -8,18 +8,18 @@
         <div class="form-group row">
             <label for="inputName" class="col-sm-2 col-form-label">Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="dreamer_name" placeholder="Enter Name Here">
+                <input type="text" class="form-control" id="dreamer_name" placeholder="Enter Name Here" name="dreamer_name">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputAge" class="col-sm-2 col-form-label">Age</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="age" placeholder="Enter Age Here">
+                <input type="number" class="form-control" id="age" placeholder="Enter Age Here" name="age">
             </div>
         </div>
         <div class="form-group">
             <label for="inputSex">Choose Sex</label>
-            <select class="custom-select">
+            <select class="custom-select" name="sex">
                 <option selected>Please Choose One</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
@@ -28,12 +28,12 @@
         <div class="form-group row">
             <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="Enter Email Here">
+                <input type="text" class="form-control" id="email" placeholder="Enter Email Here" name="email">
             </div>
         </div>
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Drop a Dream</button>
+                <button type="submit" class="btn btn-info btn-lg">Drop a Dream</button>
             </div>
         </div>
     </form>
@@ -42,6 +42,6 @@
 
     {{!-- Button to bypass user input and go directly to dreams page --}}
     <p> Click this button to skip this step and simply browse dreams.</p>
-    <a class="btn btn-primary btn-lg" href="./dreams.handlebars" role="button">Skip This</a>
+    <a class="btn btn-info btn-lg" href="./dreams.handlebars" role="button">Skip This</a>
 </div>
 
