--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
             <label for="inputSex">Choose Sex</label>
-            <select class="custom-select" name="sex">
+            <select class="custom-select" name="gender">
                 <option selected>Please Choose One</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
