--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -4,7 +4,7 @@
 {{!-- form input to create a dreamer and store in database --}}
 <div class="jumbotron">
     <h1 class="display-4">Please fill out the form below if you wish to share your dreams with others!</h1>
-    <form>
+    <form class="create-form">
         <div class="form-group row">
             <label for="inputName" class="col-sm-2 col-form-label">Name</label>
             <div class="col-sm-10">
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-info btn-lg">Drop a Dream</button>
+                <button type="submit" class="btn btn-info btn-lg" id="sub">Drop a Dream</button>
             </div>
         </div>
     </form>
