--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -7,7 +7,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="splashbox">
             <h5 class="display-4">Drop Dreams Here:</h5>
-            <form action="/dreams" method="POST">
+            <form action="/dreams" method="POST" class="dream_create">
                 <div class="form-group">
                     <label for="dream_description">Drop Dream Here:</label>
                     <textarea class="form-control" rows="5" id="dream_description" name="dream_description"></textarea>
