--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,12 +15,15 @@
             <li class="nav-item active">
                 <a class="nav-link" href="dreams.handlebars">Dreams<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="clock.handlebars">Alarm<span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Resources
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="https://www.buildingbeautifulsouls.com/dream-interpretation-meanings/30-types-of-dreams-what-they-mean/" target="_blank">Dream Types</a>
+          <a class="dropdown-item" href="https://facthacker.com/different-types-of-dreams/" target="_blank">Types of Dreams</a>
           <a class="dropdown-item" href="https://www.horoscope.com/us/editorial/dream-dictionary.aspx" target="_blank">Dream Dictionary</a>
           <a class="dropdown-item" href="https://www.amerisleep.com/blog/dream-hacking/" target="_blank">Dream Hacking</a>
         </div>
