--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -48,7 +48,7 @@
                 <div class="col-lg-12">
                     {{#each dreams}}
                     <div>
-                        {{this.dreams}}
+                        {{this.dream_description}}
                     </div>
                     {{/each}}
                 </div>
