--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,10 +6,18 @@
     <div class="container" id="splashbox">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Welcome to DreamDrop!</h1>
-                <h4>A place to share your dreams with other dreamers</h4>
-                <div>
-                    <a href="sign-in.handlebars" role="button" class="btn btn-info btn-lg btn-block">Start
+                <h1>Dream Drop</h1>
+                <br>
+                <br>
+
+
+                <div class="typewriter">
+                    <h4>Dream It then Drop It</h4>
+                </div>
+                </h4>
+
+                <div class="signdrop">
+                    <a href="sign-in.handlebars" role="button" class="btn blue-gradient btn-info btn-lg btn-block">Start
                         Dropping Dreams Now</a>
                 </div>
             </div>
