--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -2,8 +2,11 @@
 {{> header}}
 
 {{!-- form input to create a dreamer and store in database --}}
-<div class="jumbotron">
+<div class="container-fluid">
+    <div class="container">
     <h1 class="display-4">Please fill out the form below if you wish to share your dreams with others!</h1>
+    <br>
+    <br>
     <form class="create-form">
         <div class="form-group row">
             <label for="inputName" class="col-sm-2 col-form-label">Name</label>
@@ -33,15 +36,15 @@
         </div>
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-info btn-lg" id="sub">Drop a Dream</button>
+                <button type="submit" class="btn blue-gradient btn-info btn-lg" id="sub">Drop a Dream</button>
             </div>
         </div>
     </form>
-
     <hr class="my-4">
 
     {{!-- Button to bypass user input and go directly to dreams page --}}
     <p> Click this button to skip this step and simply browse dreams.</p>
-    <a class="btn btn-info btn-lg" href="./dreams.handlebars" role="button">Skip This</a>
+    <a class="btn blue-gradient btn-info btn-lg" href="./dreams.handlebars" role="button">Skip This</a>
 </div>
 
+</div>
