--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -80,7 +80,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="category">Filter by Category:</label>
-                        <select class="custom-select" name="category">
+                        <select class="custom-select" name="category" data-selected="unchecked">
                             <option selected>Please Choose One</option>
                             <option value="Daydream">Daydream</option>
                             <option value="Lucid Dream">Lucid Dream</option>
@@ -96,7 +96,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="mood">Filter by Mood:</label>
-                        <select class="custom-select" name="mood">
+                        <select class="custom-select" name="mood" data-selected="unchecked">
                             <option selected>Please Choose One</option>
                             <option value="Tense-Nervous">Tense-Nervous</option>
                             <option value="Irritated-Annoyed">Irritated-Annoyed</option>
