--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -76,7 +76,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="splashbox">
             <h5 class="display-4">Filter Which Dreams You See Here, Or Keep Scrolling to See All Dreams:</h5>
-            {{!-- <form action="/dreams" method="POST" class="dream_create"> --}}
+            <form method="GET" class="filter">
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="category">Filter by Category:</label>
