--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -124,6 +124,7 @@
                         {{this.dream_description}}
                     </div>
                     {{/each}}
+                    {{!-- <button {{this.dream_id}}> --}}
                 </div>
             </div>
         </div>
