--- a/views/clock.handlebars
+++ b/views/clock.handlebars
@@ -44,6 +44,6 @@
 		</div>
 	</div>
 
-	<script type='text/javascript' src='models/clock.js'></script>
+	<script type='text/javascript' src='../public/assets/js/clock.js'></script>
 </body>
 
