--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="index.handlebars">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="sign-in.handlebars">Sign-In<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/sign-in">Sign-In<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="dreams.handlebars">Dreams<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/dreams">Dreams<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="clock.handlebars">Alarm<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/clock">Alarm<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
