added name drop down in dream form, changed handlebar html for dreamer_name, mood, and category, added field for dream_title, added numbers to clock fields

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
                 <h1>Welcome to DreamDrop!</h1>
                 <h4>A place to share your dreams with other dreamers</h4>
                 <div>
-                    <a href="sign-in.handlebars" role="button" class="btn btn-info btn-lg btn-block">Start
+                    <a href="/sign-in" role="button" class="btn btn-info btn-lg btn-block">Start
                         Dropping Dreams Now</a>
                 </div>
             </div>
