--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -42,6 +42,6 @@
 
     {{!-- Button to bypass user input and go directly to dreams page --}}
     <p> Click this button to skip this step and simply browse dreams.</p>
-    <a class="btn btn-info btn-lg" href="./dreams.handlebars" role="button">Skip This</a>
+    <a class="btn btn-info btn-lg" href="/dreams" role="button">Skip This</a>
 </div>
 
