--- a/views/clock.handlebars
+++ b/views/clock.handlebars
@@ -134,7 +134,7 @@
 					<option value="37">37</option>
 					<option value="38">38</option>
 					<option value="39">39</option>
-					<option value="40">40</option>
+					<option value="40">40</option>`
 					<option value="41">41</option>
 					<option value="42">42</option>
 					<option value="43">43</option>
