--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar navbar-light navbar-1 white" class="example z-depth-5" >
+<nav id="nav" class="navbar navbar-light navbar-1 white" class="example z-depth-5" >
 
     <!-- Navbar brand -->
     <a class="navbar-brand" href="#">Dream Drops</a>
