--- a/views/sign-in.handlebars
+++ b/views/sign-in.handlebars
@@ -46,5 +46,6 @@
     <p> Click this button to skip this step and simply browse dreams.</p>
     <a class="btn blue-gradient btn-info btn-lg" href="./dreams.handlebars" role="button">Skip This</a>
 </div>
+</div>
 
 </div>
