--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,6 +25,8 @@
 	<link
 		href="https://fonts.googleapis.com/css?family=Cabin|Inconsolata|Nunito|Nunito+Sans|Pacifico|Quicksand|Rubik|VT323"
 		rel="stylesheet">
+		<!-- or from surge.sh -->
+<link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 	<link rel="stylesheet" href="/assets/css/header.css" type="text/css" />
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
