--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -2,7 +2,7 @@
 
 {{!-- Form to update dream data --}}
 <main>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="container-fluid">
         <div class="splashbox">
             <h5 class="display-4">Update Your Dream Here:</h5>
             <form action="/dreams" method="POST" class="dream_create">
