--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -123,8 +123,8 @@
                     <div>
                         {{this.dream_description}}
                     </div>
+                    <button class="btn btn-secondary updateButton" dreamID={{this.id}}>update this dream</button>
                     {{/each}}
-                    {{!-- <button {{this.dream_id}}> --}}
                 </div>
             </div>
         </div>
