--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -9,15 +9,15 @@
             <h5 class="display-5">Dream Drop:</h5>
             <form action="/dreams" method="POST" class="dream_create">
                 <div class="form-row">
-                    {{#each dreams}}
                     <div class="form-group col-md-8">
                         <label for="dreamer_name">Please Select Your Name From the Drop Down Menu:</label>
-                        <select id="" class="form-control" name="tv_on">
+                        <select class="form-control" name="dreamer_name">
                             <option selected>Please Choose One</option>
-                            <option value="true">{{this.dreamer_name}}</option>
+                            {{#each dreams}}
+                            <option value="true" data-id={{this.id}}>{{this.dreamer_name}}</option>
+                            {{/each}}
                         </select>
                     </div>
-                    {{/each}}
                     <div class="form-group col-md-4">
                         <label for="dreamer_title">What is the Title of Your Dream?</label>
                         <input type="text" class="form-control" id="dream_title" placeholder="Enter Food Here"
@@ -91,7 +91,7 @@
 
 
     {{!-- Form to filter dreams by either category or mood --}}
-    <div class="container-fluid">
+    {{!-- <div class="container-fluid">
         <div class="splashbox">
 
             <h5 class="display-5">Filter Which Dreams You See Here, Or Keep Scrolling to See All Dreams:</h5>
@@ -130,7 +130,7 @@
                 <button id="filterDreamBtn" type="submit" class="btn btn-info btn-lg">Filter Dreams</button>
             </form>
         </div>
-    </div>
+    </div> --}}
 
     {{!-- displays all available user dreams from dreams data table --}}
     <div class="container-fluid">
