--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,7 @@
                 </h4>
 
                 <div class="signdrop">
-                    <a href="/sign-in" role="button" class="btn blue-gradient btn-info btn-lg btn-block">Start
-
-                        Dropping Dreams Now</a>
+                    <a href="/sign-in" role="button" class="btn blue-gradient btn-info btn-lg btn-block">Start Dropping Dreams Now</a>
                 </div>
             </div>
         </div>
