edited placeholder text from food to title

--- a/views/dreams.handlebars
+++ b/views/dreams.handlebars
@@ -20,7 +20,7 @@
                     {{/each}}
                     <div class="form-group col-md-4">
                         <label for="dreamer_title">What is the Title of Your Dream?</label>
-                        <input type="text" class="form-control" id="dream_title" placeholder="Enter Food Here"
+                        <input type="text" class="form-control" id="dream_title" placeholder="Enter Title Here"
                             name="dream_title">
                     </div>
                 </div>
