--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
 	<script src="/assets/js/signup.js"></script>
 	<script src="/assets/js/style.js"></script>
-
+	<script src='/assets/js/clock.js'></script>
 
 
 
